# amadeus

./: .gitattributes  .gitignore  README.md
backend/: pyproject.toml  server.py
database/db-writer/src/: db-writer.py  requirements.txt
deploy/: .example.env  .terraform.tfstate.lock.info  fake_stream_setup.sh  infrastructure.tf  terraform.md  terraform.tfstate.backup
docs/: kafka_format.md
docs/dev/: consumer.py  docker-compose.yml  request.sql  reset_db.py
enrichment-rust/: Cargo.toml
enrichment-rust/src/: README.md  lib.rs  main.rs
enrichment-rust/src/currency_exchange/: mod.rs
enrichment-rust/src/neobase/: mod.rs
enrichment-rust/src/search/: enriched_flight.rs  enriched_reco.rs  enriched_search.rs  flight.rs  mod.rs  reco.rs  typedefs.rs
enrichment-rust/src/serde_json_helpers/: mod.rs
enrichment/src/: enricher.py  requirements.txt
fake_stream_generator/: .gitignore  Dockerfile  README.md  go.mod  kafkaFakeStreamGen.go  kafkaFakeStreamer.py  pyproject.toml
filtering/: README.md  filtering.go  go.mod  jsonTypes.go
gui/: README.md  index.html  package.json  server.py  tailwind.config.js  vite.config.ts
gui/src/: App.tsx  airports.ts
kafka/: README.md  docker-compose.yml
