[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Antoine Delègue <delegue.antoine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydruid = "^0.6.6"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
