[lib]
name = "enrichment_rust"
path = "src/lib.rs"

[package]
name = "enrichment-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
strum = "0.26.2"
strum_macros = "0.26.2"
